data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2124.wast
;; 5. **Faulty Operand Stack Behavior in Loop**:    - **Test Description**: Create a block with a loop wherein the operand stack is mishandled by either over/under-popping values leading to unbreakable loop conditions.    - **Constraint**: Proper stack management ensuring the loop can evaluate exit conditions correctly.    - **Relation to Infinite Loops**: Mismanaged stack can leave conditions unmet, causing an infinite loop.

(assert_invalid
  (module
    (func $faulty-operand-stack-loop
      (block $outer (result i32)
        (block $inner (result i32)
          (loop $loop
            (i32.const 1) 
            (i32.eqz) 
            (br_if 1)
            (i32.const 0) 
            (i32.eqz)
            (br_if 0)
          )
        )
      )
    )
  )
  "type mismatch"
)